<?xml version="1.0"?>
<package format="2">
  <name>rover_arm_pkg</name>
  <version>0.0.1</version>
  <description>Control logic for the Opportunity-style rover arm and mission planning.</description>

  <maintainer email="user@todo.todo">Rover User</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>

  <depend>control_msgs</depend>
  <depend>moveit_commander</depend>
  <depend>moveit_msgs</depend>
  
  <depend>move_base_msgs</depend>
  <depend>tf</depend>

  <depend>rosserial_python</depend>

</package>
